--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-SECRET_KEY = 12345
-DEBUG = False
-DATABASE_URL = postgresql://postgres:baCB422a3gff2G-FgDbDga5Cc4gab562@monorail.proxy.rlwy.net:20901/railway
+SECRET_KEY=None
+DEBUG=True
+DATABASE_URL=postgresql://postgres:baCB422a3gff2G-FgDbDga5Cc4gab562@monorail.proxy.rlwy.net:20901/railway
+# DATABASE_URL=postgres://postgres:1@localhost:5432/test
