Test deployment 1 DATABASE_PRIVATE_URL in .env and settings.py updated

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 SECRET_KEY=None
 DEBUG=True
 DATABASE_URL=postgresql://postgres:c2gb3cEgeBfE*Cba6E16fdd3E1GdACg2@postgres.railway.internal:5432/railway
+DATABASE_PRIVATE_URL=postgresql://postgres:c2gb3cEgeBfE*Cba6E16fdd3E1GdACg2@postgres.railway.internal:5432/railway
 # DATABASE_URL=postgres://postgres:1@localhost:5432/test
