--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 SECRET_KEY=None
 DEBUG=True
-DATABASE_URL=postgresql://postgres:c2gb3cEgeBfE*Cba6E16fdd3E1GdACg2@postgres.railway.internal:5432/railway
-DATABASE_PRIVATE_URL=postgresql://postgres:c2gb3cEgeBfE*Cba6E16fdd3E1GdACg2@postgres.railway.internal:5432/railway
+
+DATABASE_PRIVATE_URL=postgresql://postgres:E3GFF41-bfe13e-DeDGg31aggD6cgA*A@postgres-5qr1.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:E3GFF41-bfe13e-DeDGg31aggD6cgA*A@roundhouse.proxy.rlwy.net:25666/railway
 # DATABASE_URL=postgres://postgres:1@localhost:5432/test
