Test deployment 1 DEBUG=True

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=None
-DEBUG=False
+DEBUG=True
 
 DATABASE_PRIVATE_URL=postgresql://postgres:E3GFF41-bfe13e-DeDGg31aggD6cgA*A@postgres-5qr1.railway.internal:5432/railway
 DATABASE_URL=postgresql://postgres:E3GFF41-bfe13e-DeDGg31aggD6cgA*A@roundhouse.proxy.rlwy.net:25666/railway
